1.2.4 (27.02.2014):

* Tie PageRange widgets together
  Closes bug #165 "all or selected? a surprise that can bite like snake" again
* Fix parsing the units of the resolution of imported images.


1.2.3 (27.01.2014):

* Deal with crashed sessions with no session file
* Fixed bug setting TMPDIR in preferences
* Added menu item 'Open crashed session'
* Don't process empty lists of pages
  Closes bug #165 "all or selected? a surprise that can bite like snake"


1.2.2 (13.01.2014):

* Fixed paper editor widget
* Fixed position of paper size widget
* Hide geometry widgets at startup if paper selected


1.2.1 (12.01.2014):

* Fixed opening saved sessions
* Fixed storing resolution of scanned images
  Closes Debian bug #734854 (gscan2pdf wrong resolution)


1.2.0 (23.11.2013):

* Don't lose extension if user-defined tool converts pnm to pbm, ppm or pgm.
  Closes Launchpad bug 889549 (again)
  (gscan2pdf gimp integration creates page size error)
* Allow thread to import different number of pages than requested.
  Closes LP: #1163739 (Import of pdf no longer working)
* Take the resolution directly from the scanner when scanning rather than
  assuming that the system value is up-to-date.
  Closes bug 134 (reduces PDF to half size of scan)
* Fixed UTF8 handling with gocr
  Thanks to patch from Pablo Saratxaga
* Fixed import of multipage TIFFs
  Closes Launchpad bug 1181019
  (importing existing multipage tif file loads only the first one)
* Actually change the device when the device combobox is changed.
  Closes debian bug #729589
  (Can not scan using a Canon LiDE 210 with version 1.1.3-1)
* Show/hide options in CLI frontends via Edit/Preferences
* Fix Thunderbird detection from XFCE. Closes debian bug #701581
  (Thunderbird detection (for send email) does not work reliably on XFCE)
* Fixed bug opening a session file from multiple sessions
* + option in Edit/Preferences to automatically open the scan dialog
  in the background on program start. Closes debian bug #717479