@@ -3,6 +3,7 @@
 * Tie PageRange widgets together
   Closes bug #165 "all or selected? a surprise that can bite like snake" again
 * Fix parsing the units of the resolution of imported images.
+* Fix infinite loop scanning page 1 when 5+ exist.
 
 
 1.2.3 (27.01.2014):
